--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -166,6 +166,7 @@
 
 #Admin {
   height: 100%;
+  overflow: hidden;
 }
 
 #Admin .layout--admin {
